本日分の修正

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -291,6 +291,9 @@ h5 {
   background-color:#ffead5;
   padding: 10px;
 }
+.table-archaic {
+  color: grey !important;
+}
   /* ----------- iPad mini ----------- */
 
 /* Portrait and Landscape */
