--- a/html/css/style.css
+++ b/html/css/style.css
@@ -5,7 +5,7 @@ a {
   color: #134D99;
   text-decoration: none !important;
 }
-/*h2 {
+h2 {
   font-size: 30px;
   font-size: 3rem;
   position: relative;
@@ -83,7 +83,7 @@ h5 {
   padding-left: 5px;
   color:#FFF;
   overflow-wrap:  break-word;
-}*/
+}
 .highlight {
   padding: 1rem;
   margin-bottom: 1rem;
